<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent">
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:id="@+id/labelAppName"
				android:text="@string/labelAppName"
				/>
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:id="@+id/textViewAppName"
				android:text="@string/textViewAppName"
				/>
	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:id="@+id/labelAppVersion"
		android:text="@string/labelAppVersion"
		/>
	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:id="@+id/textViewAppVersion"
		android:text="@string/textViewAppVersion"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labelAppUID"
        android:text="@string/labelAppUID"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAppUid"
        android:text=""/>
<!--<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/grapher"></LinearLayout>-->

    <TextView   android:id="@+id/help_title_gest"
        android:text="Title"
        android:clickable="true"
        android:onClick="toggle_contents"
        android:layout_height="fill_parent"
        android:layout_width="wrap_content"/>

    <!--content to hide/show -->
    <TextView   android:id="@+id/txt_help_gest_show"
        android:layout_height="fill_parent"
        android:layout_width="wrap_content"
        android:text="hsajdfkhasdfhdskfhasgudhskajfhdkjsafhkdshgkdshfkdshfkdshgkjdashgkdashfkdshfkdshfdksafhdaskjfdsa"/>

    <!--<CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appDebuggerMonitor"
        android:id="@+id/checkboxAppDebug"
        android:clickable="true"
        android:onClick="monitorApp"
        android:textSize="@dimen/fontSmall"/>-->

	<!--<Button
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:id="@+id/buttonAppLaunch"
				android:text="@string/buttonLaunchApp"
				android:onClick="launchApp"/>
			<Button
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:id="@+id/buttonDebugApp"
				android:text="@string/buttonBenchmarkApp"
				android:onClick="benchmarkApp"/>-->
</LinearLayout>